--- a/src/pages/Band.module.css
+++ b/src/pages/Band.module.css
@@ -10,15 +10,3 @@
   padding: 16px;
   margin: 16px;
 }
-
-.bandPhotoContainer {
-  width: 50%;
-  display: grid;
-  grid-template-columns: auto auto;
-}
-
-.bandPhoto {
-  margin-top: 16px;
-  width: 200px;
-  justify-self: center;
-}
